--- a/working_timer/package.json
+++ b/working_timer/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.31",
     "vue": "^2.6.11",
-    "vue-localstorage": "^0.6.2"
+    "vue-localstorage": "^0.6.2",
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
