--- a/working_timer/package.json
+++ b/working_timer/package.json
@@ -12,7 +12,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "vue": "^2.6.11",
-    "vue-localstorage": "^0.6.2",
+    "vue-localstorage": "^0.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
