--- a/working_timers/public/manifest.json
+++ b/working_timers/public/manifest.json
@@ -1,4 +1,6 @@
 {
+  "short_name": "WorkingTimers",
+  "name": "WorkingTimers",
   "theme_color": "#2196f3",
   "background_color": "#2196f3",
   "display": "standalone",
