--- a/working_timers/public/manifest.json
+++ b/working_timers/public/manifest.json
@@ -1,9 +1,13 @@
 {
   "short_name": "WorkingTimers",
-  "name": "WorkingTimers",
-  "theme_color": "#2196f3",
-  "background_color": "#2196f3",
+  "name": "Working-Timers",
   "display": "standalone",
-  "scope": "/",
-  "start_url": "./index.html"
+  "start_url": "index.html",
+  "icons": [
+    {
+      "src": "images/icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ]
 }
