--- a/working_timers/public/manifest.json
+++ b/working_timers/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "index.html",
   "icons": [
     {
-      "src": "images/icon.png",
+      "src": "icon.png",
       "sizes": "192x192",
       "type": "image/png"
     }
