--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,13 +1,13 @@
 {
   "short_name": "WorkingTimers",
   "name": "Working-Timers",
-  "display": "standalone",
-  "start_url": "index.html",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "./icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     }
-  ]
+  ],
+  "display": "standalone",
+  "start_url": "index.html"
 }
