--- a/working_timers/public/manifest.json
+++ b/working_timers/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "WorkingTimers",
-  "name": "Working-Timers",
+  "name": "WorkingTimers",
   "display": "standalone",
   "start_url": "index.html"
 }
