--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,5 +1,11 @@
 {
+  "name": "Working Timers",
   "short_name": "WorkingTimers",
+  "icons": [{
+    "src": "./icon-192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }],
   "display": "standalone",
   "start_url": "index.html"
 }
