--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Working Timers",
-  "short_name": "WorkingTimers",
+  "name": "WorkingTimer",
+  "short_name": "WorkingTimer",
   "display": "standalone",
   "start_url": "index.html"
 }
